# ammonia_predict_3

./: .gitignore  .python-version  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
src/ammonia_predict_3/: __init__.py  api.py  utils.py
tests/: test_predict.py
